--- a/DSSP_evaluation-znf_lookup.ipynb
+++ b/DSSP_evaluation-znf_lookup.ipynb
@@ -21,6 +21,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "adaf0a6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#optional, batch converter of CIF files to PDB\n",
+    "from Bio.PDB import MMCIFParser\n",
+    "from Bio.PDB import PDBIO\n",
+    "for file in glob.glob(\"*.cif\"): \n",
+    "    name=os.path.basename(file)\n",
+    "    base_name=name.split(sep='.')[0]\n",
+    "    x=' '.join(re.findall(r'-(.+?)-', file)) \n",
+    "    structure = MMCIFParser().get_structure(x, file)\n",
+    "    io=PDBIO()\n",
+    "    io.set_structure(structure)\n",
+    "    io.save(base_name+\".pdb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "28210ebc",
    "metadata": {},
