--- a/dssp_lookup-export_betas.ipynb
+++ b/dssp_lookup-export_betas.ipynb
@@ -71,11 +71,11 @@
     "                        # checking that no other domain is present in search range\n",
     "                        if znf==0:\n",
     "                            domain_seq.append(str(sequence)[(int(domains_df['start'][znf])-WINDOW):(int(domains_df['stop'][znf])+5)])\n",
-    "                            domain_names.append(str(name))\n",
+    "                            domain_names.append(str(name)[2:-2:])\n",
     "                        else:\n",
     "                            if int(domains_df['stop'][znf-1])<(int(domains_df['start'][znf])-WINDOW):\n",
     "                                domain_seq.append(str(sequence)[(int(domains_df['start'][znf])-WINDOW-5):(int(domains_df['stop'][znf])+5)])\n",
-    "                                domain_names.append(str(name)+\"_\"+str(znf))\n",
+    "                                domain_names.append(str(name)[2:-2:]+\"_\"+str(znf))\n",
     "                except:\n",
     "                    None\n",
     "    print(domain_names)             \n",
